--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.bubble-1 {
+  @apply fixed -top-20 -left-20 w-64 h-64 bg-orange-200 rounded-full opacity-30;
+}
+
+.bubble-2 {
+  @apply fixed -bottom-32 -right-32 w-96 h-96 bg-orange-200 rounded-full opacity-30;
+}
+
+.bubble-3 {
+  @apply fixed top-1/4 right-10 w-32 h-32 bg-orange-200 rounded-full opacity-20;
+}
+
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -17,4 +29,5 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
